menu on mobile fixed

--- a/1razove/src/components/header/Header.scss
+++ b/1razove/src/components/header/Header.scss
@@ -96,6 +96,13 @@
       position: relative;
     }
 
+    &--duplicate{
+      display: block;
+      @media (min-width: 950px) {
+        display: none;
+      }
+    }
+
     &--opened{
       height: 100%;
     }
